test/org/midica/testfiles/failing/soundbank-url-invalid.midica
INCLUDE inc/instruments.midica

SOUNDBANK https:/ /midica.org/assets/sound/invalid.sf2

0 c /4
